--- a/frontend/src/components/Blockchain/Blockchain.css
+++ b/frontend/src/components/Blockchain/Blockchain.css
@@ -5,12 +5,34 @@
     flex-wrap: nowrap;
 }
 
+.blockchain-title{
+    /* background-color: red; */
+    flex-basis:0;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    gap: 20px;
+    align-items: center;
+}
+
+.generate-keys{
+    background-color: rgb(78, 78, 255);
+    color: white;
+    padding: 10px;
+    /* width: 100px; */
+    /* margin: 0 auto; */
+    height: 60px;
+    margin-top: 5px;
+    border-radius: 10px;
+}
+
 .block{
     display: flex;
     flex-direction: column;
     /* align-items: center; */
-    justify-content: center;
-    min-width: 500px;
+    justify-content: space-between;
+    min-width: 600px;
+    max-width: 600px;
     /* height: 200px; */
     border: 1px solid black;
     border-radius: 10px;
@@ -24,6 +46,12 @@
     margin-top: 10px;
     text-decoration: underline;
     margin-bottom:5px;
+}
+
+.block .block-main{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .block .block-info{
@@ -55,6 +83,7 @@
     text-align: center;
     border: 1px solid black;
     text-overflow: auto;
+    overflow: auto;
 }
 
 .block input{
@@ -69,4 +98,15 @@
     margin: 0 auto;
     margin-top: 5px;
     border-radius: 10px;
+}
+
+.chain-title{
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    text-decoration: underline;
+}
+
+.chain-holder{
+    margin-left: 10px;
 }
